# LABWORK-1

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  vcpkg.json
.github/workflows/: release.yml
